# dnplot

./: README.md  example_plot.py  example_waveseries.py  pyproject.toml
.github/workflows/: tests.yml
dnplot/: __init__.py  defaults.py  plotters.py
dnplot/draw_functions/: draw.py  draw_matplotlib.py
dnplot/examples/: example_waveseries.py
dnplot/plot_functions/: __init__.py  dnora_functions.py  matplotlib_functions.py  plot_functions.py  plotly_functions.py
dnplot/plotters/: plotters.py
docs/: index.rst
examples/: example_plot.py  example_plot_matplotlib.py  example_plotly_plot.py  example_waveseries.py
examples/matplotlib/: example_plot_grid copy.py  example_plot_grid.py  example_plot_spectra.py  example_plot_spectra1d.py  example_plot_wind.py
examples/non_dnora_data/: example_plot_topo.py
examples/plotly/: example_plotly_all.py  example_plotly_spectra.py  example_plotly_spectra1d.py  example_plotly_waveseries.py
tests/: test_matplotlib.py
