[project]
name = "dnplot"
version = "0.0.1"
description = "Plotting of data imported by the DNORA package"
authors = [ { name = "Konstantinos Christakos", email = "konstantinosc@met.no" } , { name = "Jan-Victor Björkqvist", email = "janvb@met.no" }, {name = "Dominykas Jasas", email = "dominykas.jasas@stud.vilniustech.lt"}]
dependencies = [ "numpy", "matplotlib" ]

[project.urls]
repository = "http://github.com/bjorkqvi/dnplot"
